--- a/src/multibots_simulations/package.xml
+++ b/src/multibots_simulations/package.xml
@@ -58,7 +58,8 @@
   <depend>gazebo_ros</depend>
   <exec_depend>gazebo</exec_depend>
   <exec_depend>turtlebot3_description</exec_depend>
-  
+  <exec_depend>turtlebot3_gazebo</exec_depend>
+
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
