--- a/src/tb3_swarm/CMakeLists.txt
+++ b/src/tb3_swarm/CMakeLists.txt
@@ -138,6 +138,9 @@ include_directories(
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/tb3_swarm_node.cpp)
 
+add_executable(robot_pose_publisher src/base/robot_pose_publisher.cpp)
+target_link_libraries(robot_pose_publisher ${catkin_LIBRARIES})
+
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
