--- a/src/tb3_swarm/package.xml
+++ b/src/tb3_swarm/package.xml
@@ -55,7 +55,7 @@
   <build_export_depend>rospy</build_export_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
-  <exec_depend>ros_navigation</exec_depend>
+  <exec_depend>navigation</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
